# A-Maze-ing_42

./: LICENSE.md  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  test.md
mazegen/: README.md  __init__.py  animation.py  cell.py  colors.py  exporter.py  game.py  generator.py  menu.py  parsing.py  renderer.py
